<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/white" >
     <TextView
     android:id="@+id/textView1"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:text="@string/app_name"
     android:textColor="@color/black"
     android:gravity="center"
     android:drawableRight="@drawable/logo_resize"
     android:layout_marginBottom="5dp"
     android:textAppearance="?android:attr/textAppearanceLarge"
     android:background="@color/greenDark" />
     
    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical" >
         
       	<LinearLayout
       	    android:layout_width="match_parent"
       	    android:layout_height="0dp"
       	    android:orientation="vertical"
       	    android:layout_weight="0.2" >

       		<TextView
       		    android:id="@+id/txtFindGroup"
       		    android:layout_width="fill_parent"
       		    android:layout_height="wrap_content"
       		    android:layout_marginTop="60dp"
       		    android:textColor="@color/black"
       		    android:text="@string/findGroupName"
       		    android:textAppearance="?android:attr/textAppearanceLarge" />

       		<EditText
       		    android:hint="@string/groupName"
       		    android:id="@+id/editTxtNameGroup"
       		    android:layout_width="match_parent"
       		    android:layout_height="wrap_content"
       		    android:layout_marginTop="10dp"
       		    android:ems="10" >

       		    <requestFocus />
       		</EditText>

       		<Button
       		    android:id="@+id/btnAddMeGroup"
       		    android:layout_width="fill_parent"
       		    android:layout_height="wrap_content"
       		    android:layout_marginTop="10dp"
       		    android:text="@string/addMeGroup"
       		    android:drawableLeft="@drawable/find"
       		    android:background="@color/greenButton" />
   
    	</LinearLayout>
		<LinearLayout
		   android:layout_width="match_parent"
		   android:layout_height="wrap_content"
		   android:background="@color/greenDark"
		   android:orientation="horizontal" >
	   
	
		    <ImageButton
		        android:contentDescription="@string/app_name"
		        android:id="@+id/imgBtnMenu"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:background="@color/greenDark"
		        android:layout_weight="0.3"
		        android:src="@drawable/menu" />
		    
		    <ImageButton
		        android:contentDescription="@string/app_name"
		        android:id="@+id/imgBtnCamera"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:background="@color/greenDark"
		        android:layout_weight="0.3"
		        android:src="@drawable/camera" />
		    
		    <ImageButton
		        android:contentDescription="@string/app_name"
		        android:id="@+id/imgBtnEvaluate"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:background="@color/greenDark"
		        android:layout_weight="0.3"
		        android:src="@drawable/evaluate" />
		
		</LinearLayout>
	</LinearLayout>
</LinearLayout>