<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/white" >
    
    <TextView
     android:id="@+id/textView1"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:text="@string/app_name"
     android:textColor="@color/black"
     android:gravity="center"
     android:drawableRight="@drawable/logo_resize"
     android:layout_marginBottom="5dp"
     android:textAppearance="?android:attr/textAppearanceLarge"
     android:background="@color/greenDark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="0.6"
        android:background="@color/white" >

        <TextView
            android:id="@+id/txtPreview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preview"
            android:textColor="@color/black"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageView
            android:contentDescription="@string/app_name"
            android:id="@+id/dishImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>
    
      

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1.1"
        android:background="@color/green" >
				
        	<SeekBar
	            android:id="@+id/seekBarGrade"
	            android:layout_marginLeft="3dp"
	            android:layout_marginRight="3dp"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" />
	       
	
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" >
	
	            <ImageButton
	                android:contentDescription="@string/sendDish"
	                android:id="@+id/btnSendToServer"
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight=".5"
	                android:src="@drawable/send"
	                android:adjustViewBounds="true"
	                android:scaleType="fitCenter" />
	
	            <ImageButton
	                android:contentDescription="@string/camera"
	                android:id="@+id/btnTakePicture"
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight=".5"
	                android:src="@drawable/camera"
	                android:adjustViewBounds="true"
	                android:scaleType="fitCenter" />
	
	        </LinearLayout>
	
    </LinearLayout>
    <LinearLayout
		   android:layout_width="match_parent"
		   android:layout_height="wrap_content"
		   android:background="@color/greenDark"
		   android:orientation="horizontal" >
	   
	
		    <ImageButton
		        android:contentDescription="@string/app_name"
		        android:id="@+id/imgBtnMenu"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:background="@color/greenDark"
		        android:layout_weight="0.3"
		        android:src="@drawable/menu" />
		    
		    <ImageButton
		        android:contentDescription="@string/app_name"
		        android:id="@+id/imgBtnCamera"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:background="@color/greenDark"
		        android:layout_weight="0.3"
		        android:src="@drawable/camera" />
		    
		    <ImageButton
		        android:contentDescription="@string/app_name"
		        android:id="@+id/imgBtnEvaluate"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:background="@color/greenDark"
		        android:layout_weight="0.3"
		        android:src="@drawable/evaluate" />
		
	</LinearLayout>
</LinearLayout>